--- a/style.css
+++ b/style.css
@@ -45,3 +45,53 @@
     font-weight: bold;
     text-align: center;
 }
+/*------------------------------RWD--------------------------------*/
+@media(max-width:600px){
+    .backimg{
+        background-image: url("rgs2.jpg");
+        background-attachment: fixed;
+        background-position: center;
+        background-size:cover;
+    }
+    .title{
+        font-size: 20px;
+        font-weight: bold;
+        color:white;
+        text-align: center;
+        background-color: rgb(62, 57, 92);
+        margin:8px;
+        padding:3px;
+        border-radius: 5px;
+        font-family: Microsoft JhengHei;
+    }
+    .container{
+        overflow:auto;
+        display:flex;
+        justify-content:center;
+        flex-wrap:wrap;
+        width:95%;
+        height:100%;
+        align-items: center;
+        background-color: rgba(255, 255, 255,0.3);
+        margin:0 auto;
+        border-radius: 1px;
+        font-family: Microsoft JhengHei;
+        border-radius: 3px;
+    }
+    .box{
+        font-size: 12px;
+        flex:none;
+        width:85%;
+        background-color: rgba(215, 225, 255 ,0.99);
+        border:2px solid rgb(37, 35, 88 ,);
+        margin:6px;
+        padding:10px 12px 10px 12px;
+        border-radius: 3px;
+    }
+    .h3ti{
+        font-size: 13px;
+        font-weight: bold;
+        text-align:left;
+    }
+
+}
