--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     border-radius: 5px;
     font-family: Microsoft JhengHei;
 }
+/*
 .container{
     overflow:auto;
     display:flex;
@@ -30,6 +31,7 @@
     font-family: Microsoft JhengHei;
     
 }
+*/
 .box{
     font-size: 15px;
     flex:none;
