--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     display:flex;
     justify-content:center;
     flex-wrap:wrap;
-    width:650px;
+    width:65%;
     height:100%;
     align-items: center;
     background-color: rgba(255, 255, 255,0.3);
