--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
     height:100%;
     align-items: center;
     background-color: rgba(255, 255, 255,0.3);
+    background-position:center;
     margin:0 auto;
     border-radius: 1px;
     font-family: Microsoft JhengHei;
